# django-bnacar-comic

./: MANIFEST.in  README.rst  pyproject.toml  setup.cfg
comic/: admin.py  models.py  tests.py  urls.py  views.py
comic/migrations/: 0001_initial.py  0002_episode_transcript_alter_series_tags.py  0003_remove_series_tags.py
comic/static/comic/: style.css
comic/templates/comic/: episode.html  index.html  tag.html
django_bnacar_comic.egg-info/: PKG-INFO  SOURCES.txt
