[metadata]
name = django-bnacar-comic
version = 0.4
description = A bare-bones Django app for webcomics.
long_description = file: README.rst
url = https://github.com/bnacar/django-bnacar-comic/
author = Benjamin Nacar
author_email = ben@bennacar.com
license = Apache-2.0
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 4.0
    Intended Audience :: Cartoonists
    License :: OSI Approved :: Apache License
    Operating System :: Unix-like
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.8
install_requires =
    Django >= 4.0
